# YGO_FM_Modding_Tools

./: .gitignore  README.md  pyproject.toml
data/: Card_Drop_Plan.xlsx  Drop_Rebalanced.xlsx  card_list.csv
ygm_fm_modding_tools/: card_list.py  covert_card_drop_plan_into_drop_excel.py
ygo_fm_rebalanced/: SLUS_014.11  card_drop_plan.xlsx  update_drop_template.xlsx
